# npkl

./: .gitignore  Cargo.toml  LICENSE  README.md  build.zig
src/: libs.rs  main.rs  main.zig
src/libs/: get_node_item.rs  get_node_item.zig  get_path_size.rs  get_path_size.zig  get_selected_item_path.rs  get_selected_item_path.zig  is_top_level_node_modules.rs  is_top_level_node_modules.zig  print_logo.rs  print_logo.zig
