[package]
name = "npkl"
version = "1.0.1"
edition = "2021"
description = "Like npkill, but written in Rust."
authors=["Val Saven <val.saven@gmail.com>"]
license = "MIT"
repository = "https://github.com/valsaven/npkl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
byte-unit = "4.0.19"
dialoguer = "0.11.0"
walkdir = "2.4.0"
