[package]
name = "npkl"
version = "1.0.2"
edition = "2021"
description = "Like npkill, but written in Rust."
authors=["Val Saven <val.saven@gmail.com>"]
license = "MIT"
repository = "https://github.com/valsaven/npkl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
byte-unit = "5.1.3"
dialoguer = "0.11.0"
walkdir = "2.4.0"
tempfile = "3.9.0"
