[package]
name = "npkl"
version = "1.0.4"
edition = "2024"
description = "Like npkill, but written in Rust."
authors=["Val Saven <val.saven@gmail.com>"]
license = "MIT"
repository = "https://github.com/valsaven/npkl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
byte-unit = "5.1.6"
dialoguer = "0.12.0"
walkdir = "2.5.0"
rayon = "1.11.0"
